[OG-92] Fix after develop merge